# rustdio

./: .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  cfg.toml  espflash.toml  radios.csv  rust-project.json  webradios-extensive-list.txt  webradios.csv
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: rust_ci.yml
docs/: README.md
lib/: ble.rs
lib/rgb-led/: Cargo.toml
lib/wifi/: Cargo.toml
lib/wifi/src/: lib.rs
scripts/: flash.sh
src/: control-radio.html  main.rs  ntp.rs  radios.rs  vs1053-old.rs  vs1053.rs
