[package]
name = "rustdio"
version = "0.1.0"
authors = ["Adrien Chapelet <adrien3d@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "rustdio"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
    "esp-idf-svc/embassy-sync",
    "esp-idf-svc/critical-section",
    "esp-idf-svc/embassy-time-driver",
]

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
embedded-hal = "1.0.0"
embedded-svc = "0.28.0"
esp-idf-hal = "0.44.1"
esp-idf-svc = { version = "0.49.1", default-features = false }
esp-idf-sys = "0.35.0"
futures = "0.3.30"
log = { version = "0.4", default-features = false }
postcard = "1.0.10"
rgb-led = { path = "lib/rgb-led" }
serde = "1.0.209"
serde_json = "1.0.127"
si4703 = "0.1.0"
#si470x = { path = "lib/si470x" }
stoppable_thread = "0.2.1"
tea5767 = "0.1.0"
#tokio = {version = "1.39.2", features = ["full"] }
toml-cfg = "0.2.0"
wifi = { path = "lib/wifi" }

[build-dependencies]
embuild = "0.32.0"
